@@ -7,10 +7,7 @@ import ca.uhn.fhir.util.BundleUtil;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Stream;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.tuple.Pair;
@@ -19,6 +16,7 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.miracum.streams.ume.onkoadttofhir.FhirProperties;
+import org.miracum.streams.ume.onkoadttofhir.mapper.*;
 import org.miracum.streams.ume.onkoadttofhir.model.MeldungExport;
 import org.miracum.streams.ume.onkoadttofhir.model.MeldungExportList;
 import org.miracum.streams.ume.onkoadttofhir.model.Tupel;
@@ -29,24 +27,49 @@ import org.springframework.boot.context.properties.EnableConfigurationProperties
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.util.ResourceUtils;
 
-@SpringBootTest(classes = {FhirProperties.class})
-@EnableConfigurationProperties(value = {FhirProperties.class})
+@SpringBootTest(
+    classes = {
+      FhirProperties.class,
+      OnkoConditionMapper.class,
+      OnkoMedicationStatementMapper.class,
+      OnkoObservationMapper.class,
+      OnkoProcedureMapper.class,
+      OnkoPatientMapper.class,
+      OnkoConditionMapper.class
+    })
+@EnableConfigurationProperties()
 public class OnkoConditionProcessorTest extends OnkoProcessorTest {
 
   private static final Logger log = LoggerFactory.getLogger(OnkoConditionProcessorTest.class);
 
   private final FhirProperties fhirProps;
+  private final OnkoMedicationStatementMapper onkoMedicationStatementMapper;
+  private final OnkoObservationMapper onkoObservationMapper;
+  private final OnkoProcedureMapper onkoProcedureMapper;
+  private final OnkoPatientMapper onkoPatientMapper;
+  private final OnkoConditionMapper onkoConditionMapper;
   private final FhirContext ctx = FhirContext.forR4();
 
   @Autowired
-  public OnkoConditionProcessorTest(FhirProperties fhirProperties) {
-    this.fhirProps = fhirProperties;
+  public OnkoConditionProcessorTest(
+      FhirProperties fhirProps,
+      OnkoMedicationStatementMapper onkoMedicationStatementMapper,
+      OnkoObservationMapper onkoObservationMapper,
+      OnkoProcedureMapper onkoProcedureMapper,
+      OnkoPatientMapper onkoPatientMapper,
+      OnkoConditionMapper onkoConditionMapper) {
+    this.fhirProps = fhirProps;
+    this.onkoMedicationStatementMapper = onkoMedicationStatementMapper;
+    this.onkoObservationMapper = onkoObservationMapper;
+    this.onkoProcedureMapper = onkoProcedureMapper;
+    this.onkoPatientMapper = onkoPatientMapper;
+    this.onkoConditionMapper = onkoConditionMapper;
   }
 
   private static Stream<Arguments> generateTestData() {
     return Stream.of(
         Arguments.of(
-            Arrays.asList(new Tupel<>("001_1.Pat_2Tumoren_TumorID_1_Diagnose.xml", 1)),
+            List.of(new Tupel<>("001_1.Pat_2Tumoren_TumorID_1_Diagnose.xml", 1)),
             1,
             "C72.0",
             "2021",
@@ -57,7 +80,7 @@ public class OnkoConditionProcessorTest extends OnkoProcessorTest {
             5,
             "2021-03-18"),
         Arguments.of(
-            Arrays.asList(new Tupel<>("002_1.Pat_2Tumoren_TumorID_2_Diagnose.xml", 1)),
+            List.of(new Tupel<>("002_1.Pat_2Tumoren_TumorID_2_Diagnose.xml", 1)),
             1,
             "C41.01",
             "2021",
@@ -68,7 +91,7 @@ public class OnkoConditionProcessorTest extends OnkoProcessorTest {
             0,
             "2021-02-08"),
         Arguments.of(
-            Arrays.asList(
+            List.of(
                 new Tupel<>("001_1.Pat_2Tumoren_TumorID_1_Diagnose.xml", 1),
                 new Tupel<>("003_Pat1_Tumor1_Therapie1_Behandlungsende_OP.xml", 1),
                 new Tupel<>(
@@ -126,19 +149,22 @@ public class OnkoConditionProcessorTest extends OnkoProcessorTest {
       payloadId++;
     }
 
-    OnkoConditionProcessor conditionProcessor = new OnkoConditionProcessor(fhirProps);
+    OnkoProcessor onkoProcessor =
+        new OnkoProcessor(
+            fhirProps,
+            onkoMedicationStatementMapper,
+            onkoObservationMapper,
+            onkoProcedureMapper,
+            onkoPatientMapper,
+            onkoConditionMapper);
 
-    OnkoObservationProcessor observationProcessor = new OnkoObservationProcessor(fhirProps);
+    var observResultBundle =
+        onkoProcessor.getOnkoToObservationBundleMapper().apply(meldungExportList);
 
     var resultBundle =
-        conditionProcessor
+        onkoProcessor
             .getOnkoToConditionBundleMapper()
-            .apply(
-                Pair.of(
-                    meldungExportList,
-                    observationProcessor
-                        .getOnkoToObservationBundleMapper()
-                        .apply(meldungExportList)));
+            .apply(Pair.of(meldungExportList, observResultBundle));
 
     if (expectedConCount == 0) {
       assertThat(resultBundle).isNull();
