@@ -7,8 +7,6 @@ import ca.uhn.fhir.util.BundleUtil;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.stream.Stream;
 import org.apache.commons.lang3.StringUtils;
@@ -18,6 +16,7 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.miracum.streams.ume.onkoadttofhir.FhirProperties;
+import org.miracum.streams.ume.onkoadttofhir.mapper.*;
 import org.miracum.streams.ume.onkoadttofhir.model.MeldungExport;
 import org.miracum.streams.ume.onkoadttofhir.model.MeldungExportList;
 import org.miracum.streams.ume.onkoadttofhir.model.Tupel;
@@ -28,42 +27,72 @@ import org.springframework.boot.context.properties.EnableConfigurationProperties
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.util.ResourceUtils;
 
-@SpringBootTest(classes = {FhirProperties.class})
-@EnableConfigurationProperties(value = {FhirProperties.class})
+@SpringBootTest(
+    classes = {
+      FhirProperties.class,
+      OnkoConditionMapper.class,
+      OnkoMedicationStatementMapper.class,
+      OnkoObservationMapper.class,
+      OnkoProcedureMapper.class,
+      OnkoPatientMapper.class,
+      OnkoConditionMapper.class
+    })
+@EnableConfigurationProperties()
 public class OnkoObservationProcessorTest extends OnkoProcessorTest {
 
   private static final Logger log = LoggerFactory.getLogger(OnkoObservationProcessorTest.class);
 
   private final FhirProperties fhirProps;
+  private final OnkoMedicationStatementMapper onkoMedicationStatementMapper;
+  private final OnkoObservationMapper onkoObservationMapper;
+  private final OnkoProcedureMapper onkoProcedureMapper;
+  private final OnkoPatientMapper onkoPatientMapper;
+  private final OnkoConditionMapper onkoConditionMapper;
   private final FhirContext ctx = FhirContext.forR4();
 
   @Autowired
-  public OnkoObservationProcessorTest(FhirProperties fhirProperties) {
-    this.fhirProps = fhirProperties;
+  public OnkoObservationProcessorTest(
+      FhirProperties fhirProps,
+      OnkoMedicationStatementMapper onkoMedicationStatementMapper,
+      OnkoObservationMapper onkoObservationMapper,
+      OnkoProcedureMapper onkoProcedureMapper,
+      OnkoPatientMapper onkoPatientMapper,
+      OnkoConditionMapper onkoConditionMapper) {
+    this.fhirProps = fhirProps;
+    this.onkoMedicationStatementMapper = onkoMedicationStatementMapper;
+    this.onkoObservationMapper = onkoObservationMapper;
+    this.onkoProcedureMapper = onkoProcedureMapper;
+    this.onkoPatientMapper = onkoPatientMapper;
+    this.onkoConditionMapper = onkoConditionMapper;
   }
 
   private static Stream<Arguments> generateTestData() {
     return Stream.of(
         Arguments.of(
-            Arrays.asList(new Tupel<>("001_1.Pat_2Tumoren_TumorID_1_Diagnose.xml", 1)),
+            List.of(new Tupel<>("001_1.Pat_2Tumoren_TumorID_1_Diagnose.xml", 1)),
             9,
             "9391/3",
             "2021-03-18",
             "T",
             5,
-            Arrays.asList("0", "1", "0"),
-            Arrays.asList("", "2a", "")),
+            List.of("0", "1", "0"),
+            List.of("", "2a", ""),
+            null,
+            null),
         Arguments.of(
-            Arrays.asList(
+            List.of(
                 new Tupel<>("001_1.Pat_2Tumoren_TumorID_1_Diagnose.xml", 1),
-                new Tupel<>("003_Pat1_Tumor1_Therapie1_Behandlungsende_OP.xml", 1)),
-            9,
+                new Tupel<>("003_Pat1_Tumor1_Therapie1_Behandlungsende_OP.xml", 1),
+                new Tupel<>("010_Pat2_Tumor1_Tod.xml", 1)),
+            10,
             "9391/8",
             "2021-03-20",
             "U",
             5,
-            Arrays.asList("0", "1", "0"),
-            Arrays.asList("is", "0", "0")));
+            List.of("0", "1", "0"),
+            List.of("is", "0", "0"),
+            "R68.8",
+            "2021-04-10"));
   }
 
   @ParameterizedTest
@@ -76,7 +105,9 @@ public class OnkoObservationProcessorTest extends OnkoProcessorTest {
       String expectedGradingCode,
       int expectedFernMetaCount,
       List<String> expectedTnmCCodes,
-      List<String> expectedTnmPCodes)
+      List<String> expectedTnmPCodes,
+      String expectedDeathIcdCode,
+      String expectedDeathDate)
       throws IOException {
 
     MeldungExportList meldungExportList = new MeldungExportList();
@@ -105,8 +136,14 @@ public class OnkoObservationProcessorTest extends OnkoProcessorTest {
       payloadId++;
     }
 
-    OnkoObservationProcessor observationProcessor = new OnkoObservationProcessor(fhirProps);
-
+    OnkoProcessor observationProcessor =
+        new OnkoProcessor(
+            fhirProps,
+            onkoMedicationStatementMapper,
+            onkoObservationMapper,
+            onkoProcedureMapper,
+            onkoPatientMapper,
+            onkoConditionMapper);
     var resultBundle =
         observationProcessor.getOnkoToObservationBundleMapper().apply(meldungExportList);
 
@@ -129,10 +166,6 @@ public class OnkoObservationProcessorTest extends OnkoProcessorTest {
 
           var valueCode = valueCodeableCon.getCodingFirstRep().getCode();
           assertThat(valueCode).isEqualTo(expectedMorphCode);
-
-          DateTimeFormatter fmt = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
-          LocalDateTime expectedLocalDateTime =
-              LocalDateTime.parse(expectedEffectDate + " 00:00:00", fmt);
 
           assertThat(obsv.getEffectiveDateTimeType().getValueAsString())
               .isEqualTo(expectedEffectDate);
@@ -182,6 +215,11 @@ public class OnkoObservationProcessorTest extends OnkoProcessorTest {
             }
           }
 
+        } else if (Objects.equals(profLoincCode, "68343-3")) { // Death
+          assertThat(((CodeableConcept) obsv.getValue()).getCodingFirstRep().getCode())
+              .isEqualTo(expectedDeathIcdCode);
+          assertThat(obsv.getEffectiveDateTimeType().getValueAsString())
+              .isEqualTo(expectedDeathDate);
         } else {
           assertThat(true).isFalse();
         }
